--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Самостоятельная работа</title>
 </head>
 <body>
+	<a href="google.com">Ссылка</a>
   <form id="MyForm">
     <label> Ваш текст </label>
     <br>
