--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<a href="google.com">Ссылка</a>
+	<img src="https://koshka.top/uploads/posts/2021-12/1638771511_1-koshka-top-p-milogo-kotika-v-shapochke-1.jpg">
   <form id="MyForm">
     <label> Ваш текст </label>
     <br>
