--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Самостоятельная работа</title>
 </head>
 <body>
+	<p>Абзац</p>
 	<a href="google.com">Google</a>
 	<img src="https://koshka.top/uploads/posts/2021-12/1638771511_1-koshka-top-p-milogo-kotika-v-shapochke-1.jpg">
   <form id="MyForm">
